# RobotAPI

./: .gitignore  IMPLEMENTATION.md  README.md  pyproject.toml  setup.py
.kiro/specs/robotapi-package/: design.md  requirements.md  tasks.md
RobotFirmware/: PROTOCOL_ANALYSIS.md  README.md
examples/: basic_movement.py  camera_scan.py  obstacle_avoidance.py
robotapi/: __init__.py  connection.py  controller.py  exceptions.py  protocol.py
tests/: __init__.py  conftest.py  test_connection.py  test_controller.py  test_protocol.py
tests/examples/: __init__.py
tests/integration/: __init__.py  test_camera.py  test_movement.py
